<resources>
    <string name="app_name">My Application</string>
    <string name="form">Inquiry Form</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="subject">Subject</string>
    <string name="reply">Replying Date</string>
    <string name="edu">Educational institution</string>
    <string name="send">Send</string>
    <string-array name="superviser">
        <item>Supervisor</item>
    </string-array>
</resources>
